--- a/app/oe/pubspec.yaml
+++ b/app/oe/pubspec.yaml
@@ -29,6 +29,39 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   fluro: ^1.6.3
+  provider: ^4.3.2
+  path_provider: ^1.6.11
+  flutter_svg: ^0.18.0
+  fluttertoast: ^7.0.2
+  dio: ^3.0.10
+  intl: ^0.16.1
+  cached_network_image: ^2.2.0+1
+  connectivity: ^0.4.9
+  google_fonts: ^1.1.0
+  device_info: ^0.4.2+4
+  flutter_staggered_grid_view: ^0.3.2
+  flutter_swiper: ^1.1.6
+  flutter_slidable: ^0.5.5
+  charts_flutter: ^0.9.0
+  flushbar: ^1.10.4
+  pull_to_refresh: ^1.6.1
+  json_serializable: ^3.3.0
+  flutter_screenutil: ^2.3.1
+  flutter_inappwebview: ^4.0.0+4
+  timeago: ^2.0.26
+  qr_flutter: ^3.2.0
+  event_bus: ^1.1.1
+  sticky_headers: ^0.1.8+1
+  sliding_up_panel: ^1.0.2
+  multi_image_picker: ^4.7.10
+  keyboard_visibility: ^0.5.6
+  url_launcher: ^5.5.0
+  extended_nested_scroll_view: ^1.0.1
+  sp_util: ^1.0.1
+  common_utils: ^1.2.1
+  jpush_flutter: ^0.5.5
+  image_cropper: ^1.3.0
+  badges: ^1.1.1
 
 dev_dependencies:
   flutter_test:
