--- a/app/oe/pubspec.yaml
+++ b/app/oe/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,8 +47,8 @@ dependencies:
   charts_flutter: ^0.9.0
   flushbar: ^1.10.4
   pull_to_refresh: ^1.6.1
-  json_serializable: ^3.3.0
-  flutter_screenutil: ^2.3.1
+  json_serializable: ^3.4.0
+  flutter_screenutil: ^3.0.0-beta.2
   flutter_inappwebview: ^4.0.0+4
   timeago: ^2.0.26
   qr_flutter: ^3.2.0
