--- a/app/oe/pubspec.yaml
+++ b/app/oe/pubspec.yaml
@@ -64,6 +64,11 @@ dependencies:
   jpush_flutter: ^0.5.5
   image_cropper: ^1.3.0
   badges: ^1.1.1
+  keyboard_actions: ^3.3.0+1
+  flutter_html: ^1.0.2
+  permission_handler: ^5.0.1+1
+  r_upgrade: ^0.3.1
+  r_album: ^0.1.1
 
 dev_dependencies:
   flutter_test:
